# MikaelMalania

./: README.md
lesson1/: dataConverting.py  firstScript.py
lesson10/: asyncProcess.py  weatherApp.py
lesson11/: silabusi.txt
lesson11/studentManagement/: pyproject.toml
lesson11/studentManagement/studentApp/: db.sqlite3
lesson11/studentManagement/studentApp/studentApp/: asgi.py  settings.py  urls.py
lesson11/studentManagement/studentApp/studentProject/: apps.py  models.py  views.py
lesson11/studentManagement/studentApp/studentProject/migrations/: 0002_student.py  0003_student_password_student_username.py
lesson11/studentManagement/studentApp/studentProject/static/styles/: style.css
lesson11/studentManagement/studentApp/studentProject/static/templates/: base.html  index.html  reg_student.html  tv_shows.html
lesson11/studentManagement/studentManagementSystem/studentManagementSystem/: asgi.py  urls.py
lesson12/studentManagement/: pyproject.toml
lesson12/studentManagement/studentApp/: db.sqlite3
lesson12/studentManagement/studentApp/studentApp/: settings.py
lesson12/studentManagement/studentApp/studentProject/: models.py  views.py
lesson12/studentManagement/studentApp/studentProject/static/templates/: addbook.html  student_login.html
lesson12/studentManagement/studentManagementSystem/: db.sqlite3
lesson12/studentManagement/studentManagementSystem/studentManagementSystem/: settings.py  wsgi.py
lesson14/: silabusi.txt
lesson2/: task1.py  task10.py  task12.py  task2.py  task4.py  task5.py  task6.py  task8.py
lesson3/: task10.py  task2.py  (+2 more)
(+73 files in other folders)
